# firmware

./: .gitmodules  README.md
fob/: CMakeLists.txt  README  platformio.ini
fob/main/: CMakeLists.txt
fob/src/: fob.cpp
lock/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig 3  sdkconfig 4  sdkconfig.old
lock/components/api/: CMakeLists.txt  SmartKnockAPI.cpp  SmartKnockAPI.h
lock/components/api/include/: SmartKnockAPI.h
lock/components/ble/: BLE.cpp  CMakeLists.txt
lock/components/ble/include/: BLE.h
lock/components/esp_adc/: CMakeLists.txt  esp_adc.cpp
lock/components/esp_adc/include/: esp_adc.h
lock/components/fobauth/: CMakeLists.txt  FobAuth.cpp
lock/components/fobauth/include/: FobAuth.h  bigd.h  bigdigits.h  bigdtypes.h
lock/components/motor/: CMakeLists.txt  Motor.cpp
lock/components/motor/include/: Motor.h
lock/components/nvs/: CMakeLists.txt  NVSWrapper.cpp
lock/components/nvs/include/: NVSWrapper.h
lock/components/sleep/: CMakeLists.txt  DeepSleep.cpp
lock/components/sleep/include/: DeepSleep.h
lock/components/ulp/: CMakeLists.txt  ulp.cpp
lock/components/ulp/include/: ulp.h
lock/components/ulp_adc/: CMakeLists.txt  ulp_adc.cpp
lock/components/ulp_adc/include/: ulp_adc.h
lock/components/ulp_adc/ulp/: adc.S
lock/components/wifi/: CMakeLists.txt  WifiWrap.cpp
lock/components/wifi/include/: WifiWrap.h
lock/main/: CMakeLists.txt  smartknock-lock.cpp
